2010-02-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix checksums letter
	* Always save the permission to database
	* summarize_changes: Re-enabled file-type detection for removed files

2010-02-18	Richard van den Berg  <richard@vdberg.org>
	* Adjust building of fopen.c by Steve Grubb <sgrubb@redhat.com>
	* Fix error handling for prelink by Steve Grubb <sgrubb@redhat.com>

2010-02-17	Richard van den Berg  <richard@vdberg.org>
	* Fix several warnings by Steve Grubb <sgrubb@redhat.com>
	* Check LD in configure by Steve Grubb <sgrubb@redhat.com>
	* Fix xattrs typos by Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Reworked summarize_changes option by Hannes von Haugwitz <hannes@vonhaugwitz.com>

2010-02-13	Richard van den Berg  <richard@vdberg.org>
	* Added autoconf patch from Steve Grubb <sgrubb@redhat.com>
	* Removed AM_PROG_LIBTOOL from configure.in

2010-02-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed wrong char array size

2010-02-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new option to summarize changes in output file

2009-05-15	Richard van den Berg  <richard@vdberg.org>
	* Prelink patch by Peter Vrabec <pvrabec@redhat.com>

2007-12-20	Richard van den Berg  <richard@vdberg.org>
	* Fix equals matches, patch by Brian De Wolf <bldewolf@csupomona.edu>

2007-08-22	Richard van den Berg  <richard@vdberg.org>
	* Turn CR/LF into LF, patch by Steve Conklin <sconklin@redhat.com>

2007-06-05	Richard van den Berg  <richard@vdberg.org>
	* Display complete selinux context, patch by Steve Conklin <sconklin@redhat.com>

2007-05-15	Richard van den Berg  <richard@vdberg.org>
	* Quit autogen.sh if required tools are not found

2007-04-27	Richard van den Berg  <richard@vdberg.org>
	* Only use optional groups in "make check" when enabled
	* Prevent segfaults in db_write_byte_base64, patch from James Antill
	* Fix aide.spec, patch by George Hansper <georgeh@anstat.com.au>

2006-12-19	Richard van den Berg  <richard@vdberg.org>